# tokensave

./: CHANGELOG.md  Cargo.toml  README.md  TEST-QUERIES.md  build.rs
.github/workflows/: ci.yml
docs/: LEAN-CTX-COMPARE.md  MCP-extensions.md  TOKEN-SAVE-WHATSNEW.md  USER-GUIDE.md
examples/: bench_extract.rs
scripts/mcp_probe/: README.md  build_matrix.py  isolated.py  probe.py  repos.toml
scripts/mcp_probe/tools/: cpp.py  java.py  rust.py
src/: cli.rs  commands.rs  config.rs  display.rs  doctor.rs  lib.rs  main.rs  monitor.rs  project_watcher.rs  serve.rs  tokensave.rs  tool_command.rs  types.rs  upgrade.rs
src/agents/: copilot.rs  mod.rs
src/context/: builder.rs  formatter.rs  mod.rs  ranking.rs  read_cache.rs  read_modes.rs
src/db/: migrations.rs  queries.rs
src/diagnostics/: mod.rs  python.rs  rust.rs  typescript.rs
src/extraction/: bash_extractor.rs  batch_extractor.rs  c_extractor.rs  clojure_extractor.rs  cobol_extractor.rs  complexity.rs  cpp_extractor.rs  csharp_extractor.rs  dart_extractor.rs  dockerfile_extractor.rs  elixir_extractor.rs  erlang_extractor.rs  fortran_extractor.rs  fsharp_extractor.rs  glsl_extractor.rs  go_extractor.rs  gwbasic_extractor.rs  haskell_extractor.rs  hlsl_extractor.rs  java_extractor.rs  julia_extractor.rs  kotlin_extractor.rs  lean_extractor.rs  lua_extractor.rs  markdown_extractor.rs  metal_extractor.rs  mod.rs  msbasic2_extractor.rs  nix_extractor.rs  objc_extractor.rs  ocaml_extractor.rs  pascal_extractor.rs  perl_extractor.rs  php_extractor.rs  powershell_extractor.rs  proto_extractor.rs  python_extractor.rs  qbasic_extractor.rs  quint_extractor.rs  r_extractor.rs  (+11 more)
src/graph/: queries.rs  traversal.rs
src/mcp/: server.rs
src/mcp/tools/: definitions.rs  handlers.rs
src/mcp/tools/handlers/: analysis.rs  git.rs  graph.rs  health.rs  info.rs  mod.rs
tests/: context_test.rs  copilot_agent_test.rs  corruption_test.rs  db_query_test.rs  db_test.rs  graph_test.rs  mcp_handler_test.rs  mcp_test.rs  memory_test.rs  migration_test.rs  resolution_test.rs  rust_extraction_test.rs  tokensave_test.rs  types_test.rs
