[package]
name = "tokensave"
version = "6.0.0"
edition = "2021"
description = "Code intelligence tool that builds a semantic knowledge graph from Rust, Go, Java, Scala, TypeScript, Python, C, C++, Kotlin, C#, Swift, and many more codebases"
license = "MIT"
repository = "https://github.com/aovestdipaperino/tokensave"
homepage = "https://github.com/aovestdipaperino/tokensave"
readme = "README.md"
keywords = ["code-intelligence", "knowledge-graph", "mcp", "tree-sitter", "claude"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".mcpregistry_*",
    ".rtk/",
    ".claude/",
    "CLAUDE.md",
    "cache/",
    "docs/LSP-INTEGRATION.md",
    "docs/TOKENSAVE-ALTERNATIVES.md",
    "docs/TOKENSAVIOR-REPORT.md",
    "generated-illustrations/",
    "local-only/",
    ".worktrees/",
]

[features]
default = ["full"]

# Lite tier (11 languages) — always compiled, no feature flag needed:
# Rust, Go, Java, Scala, TypeScript/JavaScript, Python, C, C++, Kotlin, C#, Swift
lite = []

medium = ["lang-dart", "lang-pascal", "lang-php", "lang-ruby", "lang-bash", "lang-protobuf", "lang-powershell", "lang-nix", "lang-vbnet"]
full = ["medium", "lang-lua", "lang-zig", "lang-objc", "lang-perl", "lang-batch", "lang-fortran", "lang-cobol", "lang-msbasic2", "lang-gwbasic", "lang-qbasic", "lang-dockerfile", "lang-glsl", "lang-markdown", "lang-r", "lang-sql", "lang-julia", "lang-haskell", "lang-ocaml", "lang-clojure", "lang-erlang", "lang-elixir", "lang-fsharp", "lang-quint", "lang-toml", "lang-lean"]

# Language features (all grammars provided by tokensave-large-treesitters)
lang-dart = []
lang-pascal = []
lang-php = []
lang-ruby = []
lang-bash = []
lang-protobuf = []
lang-powershell = []
lang-nix = []
lang-vbnet = []
lang-lua = []
lang-zig = []
lang-objc = []
lang-perl = []
lang-batch = []
lang-fortran = []
lang-cobol = []
lang-msbasic2 = []
lang-gwbasic = []
lang-qbasic = []
lang-dockerfile = []
lang-glsl = []
lang-markdown = []
lang-r = []
lang-sql = []
lang-julia = []
lang-haskell = []
lang-ocaml = []
lang-clojure = []
lang-erlang = []
lang-elixir = []
lang-fsharp = []
lang-quint = []
lang-toml = []
lang-lean = []
test-transport = []

[lib]
name = "tokensave"

[[bin]]
name = "tokensave"
path = "src/main.rs"

[dependencies]
libsql = "0.9.30"
tree-sitter = "0.26"
tokensave-large-treesitters = { version = "0.5.0", git = "https://github.com/aovestdipaperino/tokensave-large-treesitters" }
# Force tree-sitter-dart 0.2 — 0.1 fails to wrap top-level declarations
# in `top_level_variable_declaration` / `function_declaration` nodes,
# breaking the dart extractor and most dart_extraction_test cases.
# medium-treesitters declares `tree-sitter-dart = "0.1"` which won't
# pick up 0.2 via SemVer; pulling it directly here forces the lock file
# to resolve to 0.2 for the whole workspace.
tree-sitter-dart = "0.2"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
ureq = { version = "3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.11"
glob = "0.3"
walkdir = "2"
ignore = "0.4"
gix = { version = "0.81", default-features = false, features = ["revision", "blob-diff", "sha1"] }
dirs = "6"
daemon-kit = "0.1.4"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
hex = "0.4"
rayon = "1"
bincode = "1.3"
getrandom = "0.2"
self-replace = "1"
memmap2 = "0.9"
crossterm = "0.28"
fs2 = "0.4"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
zip = { version = "8", default-features = false, features = ["deflate"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_IO"] }

[build-dependencies]
logo-art = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "large_repos"
harness = false

